--- a/config/env.yml
+++ b/config/env.yml
@@ -3,3 +3,6 @@ development:
   database_user: 'postgres'
   database_pass: '@2016rootDB+072771472'
   database_db: 'codhab_development2'
+onesignal:
+  auth_token: 'MmEyZTMxMDgtZWEyOC00MTkzLWE1YTUtOWUwMDUxZGUxYzVi'
+  app_id: 'f8691fb0-e0c9-4d6a-b927-c795b65727c5'
