--- a/config/env.yml
+++ b/config/env.yml
@@ -2,7 +2,7 @@ development:
   database_host: '10.233.38.16'
   database_user: 'postgres'
   database_pass: '@2016rootDB+072771472'
-  database_db: 'codhab_production'
+  database_db: 'codhab_development2'
   database_schema: 'portal, extranet, generic'
 production:
   secret_key_base: 'xxxxx'
