--- a/config/env.yml
+++ b/config/env.yml
@@ -7,5 +7,5 @@ development:
 production:
   secret_key_base: 'xxxxx'
 onesignal:
-  auth_token: 'xxxxx'
-  app_id: 'xxxxx'
+  auth_token: 'YjIwYTAyOWYtNTMxMC00Y2I3LTkzZWEtYTg3ZTkzYjkzOTg5'
+  app_id: 'f8691fb0-e0c9-4d6a-b927-c795b65727c5'
